<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CollaborativeWhiteboard</string>
    <string name="action_settings">Settings</string>
    <string name="title">Collaborative Whiteboard</string>
    <string name="username">Username</string>
    <string name="server_address">IP Address</string>
    <string name="server_port">Port</string>
    <string name="connect_button">Connect</string>

</resources>
