<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="48sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/server_address"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="2"
                android:hint="@string/server_address"
                android:inputType="textUri"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/server_port"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:hint="@string/server_port"
                android:inputType="number"
                android:textSize="22sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button_connect"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/connect_button"
            android:layout_gravity="right"
            android:gravity="center" />
    </LinearLayout>

</RelativeLayout>